; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-sd-device-monitor.c_monitor_handler.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-sd-device-monitor.c_monitor_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i8*)* @monitor_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @monitor_handler(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  store i8* %9, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @sd_device_get_syspath(i32* %10, i8** %7)
  %12 = icmp sge i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert_se(i32 %13)
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = call i32 @streq(i8* %15, i8* %16)
  %18 = call i32 @assert_se(i32 %17)
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @sd_device_monitor_get_event(i32* %19)
  %21 = call i32 @sd_event_exit(i32 %20, i32 100)
  ret i32 %21
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @sd_device_get_syspath(i32*, i8**) #1

declare dso_local i32 @streq(i8*, i8*) #1

declare dso_local i32 @sd_event_exit(i32, i32) #1

declare dso_local i32 @sd_device_monitor_get_event(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
